Wrestling with CSS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./css.style">
+    <meta name="viewport" content="width=device-width, initial scale=1"/>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Portfolio</title>
 </head>
 
@@ -16,13 +17,13 @@
                     <a href="#about-me">About Me</a>  
                 </li>
                 <li>
-                    <a href="work">Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="contact-me">Contact Me</a>
+                    <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="Resume">Resume</a>
+                    <a href="#Resume">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -38,11 +39,11 @@
                 I was born and raised in Colorado Springs, CO and love to spend my time outdoors as often as I can. I also enjoy volunteering at my church and telling others about Jesus. 
             </p>
         </article>
-        <article id="Work" class="main-boxes">
+        <article id="work" class="main-boxes">
             <img src="" class="float-right"/>
             <h2>Work</h2>
             <p>
-                Here are links to the work I have completed s far. These examples show my progress in HTML, CSS, and Javascript. 
+                Here are links to the work I have completed so far. These examples show my progress in HTML, CSS, and Javascript. 
             </p>
         </article>
         <article id="contact-me" class="main-boxes">
@@ -52,7 +53,19 @@
                 Here are the easiest ways to get in contact with me. 
             </p>
         </article>
-        <article id="Resume" class="main-boxes"></article>    
+        <article id="Resume" class="main-boxes">
+            <img src="" class="float-right"/>
+            <h2>Resume</h2>
+            <p>
+                Below is a copy of my current resume. 
+            </p>
+        </article>
+        <footer class="footer">
+            <h2>Thanks for visiting</h2>
+            <p>
+                Go Pack Go 
+            </p>
+        </footer>    
     </main>
 
 </body>
