Forgot to commit for a while

--- a/index.html
+++ b/index.html
@@ -60,13 +60,26 @@
                 Below is a copy of my current resume. 
             </p>
         </article>
-        <footer class="footer">
-            <h2>Thanks for visiting</h2>
-            <p>
-                Go Pack Go 
-            </p>
-        </footer>    
     </main>
-
+    <footer class="footer">
+        <h2>Contact Me</h2>
+        <nav>
+            <ul>
+                <li>
+                    563.564.6190
+                </li>
+                <li>
+                    joshbeach2007@gmail.com
+                </li>
+                <li>
+                   <a href="https://github.com/Jbeach32">Github</a> 
+                </li>
+                <li>
+                    <a href="https://linkedin.com/in/joshua-beach-5353481bb">Linkin</a>
+                </li>
+            </ul>
+        </nav>
+        
+    </footer>    
 </body>
 </html>
