Add more css and tweak html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial scale=1"/>
+    <link rel="reset" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Portfolio</title>
 </head>
@@ -28,7 +29,15 @@
             </ul>
         </nav>
     </header>
-    <img class="Profile Picture"></img>
+    <title>
+        <img src="./Face.jpg" class="Profile Picture"></img>
+        <h2>About Me</h2>
+            <p>
+                I am new to the Web Development world but excited and eager to learn. I truly enjoy a new challenge and am quick to learn new concepts and material. 
+                My background in Quality Control lends itself in tying together the need for attention to detail and debugging code. 
+                I was born and raised in Colorado Springs, CO and love to spend my time outdoors as often as I can. I also enjoy volunteering at my church and telling others about Jesus. 
+            </p>
+    </title>
     <main class="content">
         <article id="about-me" class="main-boxes">
             <img src="" class="float-left"/>
@@ -37,20 +46,13 @@
                 I am new to the Web Development world but excited and eager to learn. I truly enjoy a new challenge and am quick to learn new concepts and material. 
                 My background in Quality Control lends itself in tying together the need for attention to detail and debugging code. 
                 I was born and raised in Colorado Springs, CO and love to spend my time outdoors as often as I can. I also enjoy volunteering at my church and telling others about Jesus. 
-            </p>
+            </p> 
         </article>
         <article id="work" class="main-boxes">
             <img src="" class="float-right"/>
             <h2>Work</h2>
             <p>
                 Here are links to the work I have completed so far. These examples show my progress in HTML, CSS, and Javascript. 
-            </p>
-        </article>
-        <article id="contact-me" class="main-boxes">
-            <img src="" class="float-left"/>
-            <h2>Contact Me</h2>
-            <p>
-                Here are the easiest ways to get in contact with me. 
             </p>
         </article>
         <article id="Resume" class="main-boxes">
@@ -62,7 +64,7 @@
         </article>
     </main>
     <footer class="footer">
-        <h2>Contact Me</h2>
+        <h2 id="contact-me">Contact Me</h2>
         <nav>
             <ul>
                 <li>
