--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Portfolio</title>
 </head>
 
-<img>
+<body>
     <header class="header">
         <h1>Josh Beach Portfolio</h1>
         <nav>
@@ -29,37 +29,38 @@
             </ul>
         </nav>
     </header>
-    <title>
-        <img src="./Face.jpg" class="Profile Picture"></img>
-        <h2>About Me</h2>
+    <div class="profile-pic">
+        <img src="Face.jpg">
+        <h2 class="about-me">About Me</h2>
+        <div id="about-me" class="paragraph">I am new to the Web Development world but excited and eager to learn. I truly enjoy a new challenge and am quick to learn new concepts and material. 
+            My background in Quality Control lends itself in tying together the need for attention to detail and debugging code. 
+            I was born and raised in Colorado Springs, CO and love to spend my time outdoors as often as I can. I have been married for 13 years to my wonderful wife Alyssa and we share
+            the privilege of raising three wonderful children, Jackson, Jameson, and Dejah. 
+            I also enjoy volunteering at my church and telling others about Jesus.</div>
+    </div>
+    <main class="box">
+        <article id="work" class="main-boxes">
+            <h2>HTML</h2>
             <p>
-                I am new to the Web Development world but excited and eager to learn. I truly enjoy a new challenge and am quick to learn new concepts and material. 
-                My background in Quality Control lends itself in tying together the need for attention to detail and debugging code. 
-                I was born and raised in Colorado Springs, CO and love to spend my time outdoors as often as I can. I also enjoy volunteering at my church and telling others about Jesus. 
+                HTML Deployed Page 
             </p>
-    </title>
-    <main class="content">
-        <article id="about-me" class="main-boxes">
-            <img src="" class="float-left"/>
-            <h2>About Me</h2>
-            <p>
-                I am new to the Web Development world but excited and eager to learn. I truly enjoy a new challenge and am quick to learn new concepts and material. 
-                My background in Quality Control lends itself in tying together the need for attention to detail and debugging code. 
-                I was born and raised in Colorado Springs, CO and love to spend my time outdoors as often as I can. I also enjoy volunteering at my church and telling others about Jesus. 
-            </p> 
         </article>
         <article id="work" class="main-boxes">
-            <img src="" class="float-right"/>
-            <h2>Work</h2>
+            <h2>CSS</h2>
             <p>
-                Here are links to the work I have completed so far. These examples show my progress in HTML, CSS, and Javascript. 
+                CSS Deployed Page 
+            </p>
+        </article>
+        <article id="work" class="main-boxes">
+            <h2>Javascript</h2>
+            <p>
+                Javacript Deployed Page
             </p>
         </article>
         <article id="Resume" class="main-boxes">
-            <img src="" class="float-right"/>
             <h2>Resume</h2>
             <p>
-                Below is a copy of my current resume. 
+                Josh Beach Resume
             </p>
         </article>
     </main>
