--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <div class="profile-pic">
         <img src="Images/Face.jpg" class="pic">
         <h2 class="about-me">About Me</h2>
-        <div id="about-me" class="paragraph">I am new to the Web Development world but excited and eager to learn. I truly enjoy a new challenge and am quick to learn new concepts and material. 
+        <div id="about-me" class="paragraph">I am new to the Web Development world and excited and eager to learn. I truly enjoy a new challenge and am quick to learn new concepts and material. 
             My background in Quality Control lends itself in tying together the need for attention to detail and debugging code. 
             I was born and raised in Colorado Springs, CO and love to spend my time outdoors as often as I can. I have been married for 13 years to my wonderful wife Alyssa and we share
             the privilege of raising three wonderful children, Jackson, Jameson, and Dejah. 
             I also enjoy volunteering at my church and telling others about Jesus.</div>
     </div>
-    <div>
+    <div class="container">
         <article id="work" class="main-box">
             <h2>HTML</h2>
             <a href="https://jbeach32.github.io/HTML-GIT-CSS-01/">
