--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <main class="box">
         <article id="work" class="imageOne">
             <h2>CSS</h2>
-            <a href="">
+            <a href="https://jbeach32.github.io/Portfolio/">
                 CSS Deployed Page 
             </a>
         </article>
